Added JS functions for order JSON handling and backend connection

--- a/hebrews-coffee-site/src/lib/styles/app.css
+++ b/hebrews-coffee-site/src/lib/styles/app.css
@@ -125,3 +125,11 @@ main {
     transform: translateX(-50%);
     top: -1rem;
 }
+
+.order-buttons {
+    margin-top: 1rem;
+}
+
+button.small {
+    width: 25%;
+}
