--- a/hebrews-coffee-site/src/lib/styles/app.css
+++ b/hebrews-coffee-site/src/lib/styles/app.css
@@ -22,21 +22,37 @@ html, body {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     min-height: 100vh;
     background-color: #FFFAEA;
+    padding: 10px;
 }
 
+h1 {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+}
+
+strong {
+    font-size: 18px;
+}
+
+
+
 .order-buttons {
-    width: 75%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
+}
+
+.order-page {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
 }
 
 .bar-button {
@@ -50,16 +66,37 @@ main {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
-    box-shadow: -5px 5px 5px 0.25rem #EEE8D2;
 }
 
 .custom-bar-button {
     font: bold 18px/1.5 Comfortaa, Helvetica, Arial, sans-serif;
     background-color: #FFFAEA;
-    box-shadow: -5px 5px 5px 0.25rem #EEE8D2;
     padding: 10px 20px;
     border-width: 10px;
     border-radius: 5px;
+}
+
+.order-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.temp-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.temp-icons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.temp-text {
+    display: flex;
+    justify-content: center;
 }
 
 .temp-button {
@@ -76,7 +113,9 @@ main {
 }
 
 .drop-options {
-    width: 75%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     justify-items: center;
 }
 
@@ -88,6 +127,18 @@ main {
 }
 
 .customizer-select select {
+    background-color: #FFFAEA;
+    border: 2px solid #311F16;
+    color: #311F16;
+    border-radius: 0.5rem;
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    appearance: none;
+    font: bold 16px/1.5 Comfortaa, Helvetica, Arial, sans-serif;
+}
+
+.customizer-select input {
     background-color: #FFFAEA;
     border: 2px solid #311F16;
     color: #311F16;
@@ -114,6 +165,8 @@ main {
 }
 
 .border-text {
+    display: inline-flex;
+    white-space: nowrap;
     background-color: #FFFAEA;
     color: #311F16;
     width: fit-content;
@@ -126,6 +179,31 @@ main {
     top: -1rem;
 }
 
-button.small {
+.small {
     width: 25%;
+}
+
+.confirm-window {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+}
+
+.confirm-details {
+    flex-basis: 70%;
+    border: 2px solid #311F16;
+    border-radius: 5px;
+    padding: 1%;
+    height: fit-content;
+}
+
+.confirm-sidebar {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    border: 2px solid #311F16;
+    border-radius: 5px;
+    padding: 1%;
+    gap: 10px;
+    height: 100%;
 }
